// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer component renders correctly 1`] = `
<div>
  <div
    class="Footer-root-1"
    data-testid="footer"
  >
    <div
      class="Container-root-13"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-justify-content-xs-space-between"
        >
          <div
            class="MuiGrid-root Grid-item-15 MuiGrid-item"
          >
            <h4
              class="MuiTypography-root Typography-root-17 MuiTypography-h4"
              data-testid="typography"
            >
              Get in touch
            </h4>
            <nav>
              <ul
                class="Footer-list-7"
              >
                <li
                  class="Footer-listItem-2"
                >
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiButton-root Button-root-25 MuiButton-text Button-text-26 Button-textDarkBg-30 Footer-link-6 MuiButton-textPrimary"
                    href="tel:+4401234567890"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-label Button-label-28"
                    >
                      <span
                        class="MuiButton-startIcon Button-startIcon-29 MuiButton-iconSizeMedium"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"
                          />
                        </svg>
                      </span>
                      +44 (0) 1234567890
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                </li>
                <li
                  class="Footer-listItem-2"
                >
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiButton-root Button-root-25 MuiButton-text Button-text-26 Button-textDarkBg-30 Footer-link-6 MuiButton-textPrimary"
                    href="mailto:info@bmigroup.com"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-label Button-label-28"
                    >
                      <span
                        class="MuiButton-startIcon Button-startIcon-29 MuiButton-iconSizeMedium"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
                          />
                        </svg>
                      </span>
                      info@bmigroup.com
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                </li>
                <li
                  class="Footer-listItem-2 Footer-listItemIcon-3"
                >
                  <a
                    aria-disabled="false"
                    aria-label="Facebook"
                    class="MuiButtonBase-root MuiIconButton-root IconButton-root-36 iconButton IconButton-medium-42 IconButton-text-38 IconButton-textDark-39 Footer-iconLink-4"
                    href="https://facebook.com/bmigroup"
                    tabindex="0"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root Footer-icon-5"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M5 3h14a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2m13 2h-2.5A3.5 3.5 0 0 0 12 8.5V11h-2v3h2v7h3v-7h3v-3h-3V9a1 1 0 0 1 1-1h2V5z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                </li>
                <li
                  class="Footer-listItem-2 Footer-listItemIcon-3"
                >
                  <a
                    aria-disabled="false"
                    aria-label="LinkedIn"
                    class="MuiButtonBase-root MuiIconButton-root IconButton-root-36 iconButton IconButton-medium-42 IconButton-text-38 IconButton-textDark-39 Footer-iconLink-4"
                    href="https://linkedin.com/bmigroup"
                    tabindex="0"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root Footer-icon-5"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                </li>
                <li
                  class="Footer-listItem-2 Footer-listItemIcon-3"
                >
                  <a
                    aria-disabled="false"
                    aria-label="Youtube"
                    class="MuiButtonBase-root MuiIconButton-root IconButton-root-36 iconButton IconButton-medium-42 IconButton-text-38 IconButton-textDark-39 Footer-iconLink-4"
                    href="https://youtube.com/bmigroup"
                    tabindex="0"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root Footer-icon-5"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10 15l5.19-3L10 9v6m11.56-7.83c.13.47.22 1.1.28 1.9.07.8.1 1.49.1 2.09L22 12c0 2.19-.16 3.8-.44 4.83-.25.9-.83 1.48-1.73 1.73-.47.13-1.33.22-2.65.28-1.3.07-2.49.1-3.59.1L12 19c-4.19 0-6.8-.16-7.83-.44-.9-.25-1.48-.83-1.73-1.73-.13-.47-.22-1.1-.28-1.9-.07-.8-.1-1.49-.1-2.09L2 12c0-2.19.16-3.8.44-4.83.25-.9.83-1.48 1.73-1.73.47-.13 1.33-.22 2.65-.28 1.3-.07 2.49-.1 3.59-.1L12 5c4.19 0 6.8.16 7.83.44.9.25 1.48.83 1.73 1.73z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                </li>
              </ul>
            </nav>
          </div>
          <div
            class="MuiGrid-root Grid-item-15 MuiGrid-item"
          >
            <h4
              class="MuiTypography-root Typography-root-17 MuiTypography-h4"
              data-testid="typography"
            >
              About BMI
            </h4>
            <nav>
              <ul
                class="Footer-list-7"
              >
                <li
                  class="Footer-listItem-2"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root-25 MuiButton-text Button-text-26 Button-textDarkBg-30 Footer-link-6 MuiButton-textPrimary"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label Button-label-28"
                    >
                      Our Story
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </li>
                <li
                  class="Footer-listItem-2"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root-25 MuiButton-text Button-text-26 Button-textDarkBg-30 Footer-link-6 MuiButton-textPrimary"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label Button-label-28"
                    >
                      Our Brands
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </li>
                <li
                  class="Footer-listItem-2"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root-25 MuiButton-text Button-text-26 Button-textDarkBg-30 Footer-link-6 MuiButton-textPrimary"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label Button-label-28"
                    >
                      Diversity
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </li>
                <li
                  class="Footer-listItem-2"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root-25 MuiButton-text Button-text-26 Button-textDarkBg-30 Footer-link-6 MuiButton-textPrimary"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label Button-label-28"
                    >
                      BMI's CSR Statement
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </li>
              </ul>
            </nav>
          </div>
          <div
            class="MuiGrid-root Grid-item-15 MuiGrid-item"
          >
            <h4
              class="MuiTypography-root Typography-root-17 MuiTypography-h4"
              data-testid="typography"
            >
              Partner program
            </h4>
            <nav>
              <ul
                class="Footer-list-7"
              >
                <li
                  class="Footer-listItem-2"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root-25 MuiButton-text Button-text-26 Button-textDarkBg-30 Footer-link-6 MuiButton-textPrimary"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label Button-label-28"
                    >
                      BMI RoofPro
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </li>
                <li
                  class="Footer-listItem-2"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root-25 MuiButton-text Button-text-26 Button-textDarkBg-30 Footer-link-6 MuiButton-textPrimary"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label Button-label-28"
                    >
                      Team Icopal
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </li>
                <li
                  class="Footer-listItem-2"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root-25 MuiButton-text Button-text-26 Button-textDarkBg-30 Footer-link-6 MuiButton-textPrimary"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label Button-label-28"
                    >
                      Training
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </li>
                <li
                  class="Footer-listItem-2"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root-25 MuiButton-text Button-text-26 Button-textDarkBg-30 Footer-link-6 MuiButton-textPrimary"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label Button-label-28"
                    >
                      Brand Central
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </li>
              </ul>
            </nav>
          </div>
          <div
            class="MuiGrid-root Grid-item-15 MuiGrid-item"
          >
            <h4
              class="MuiTypography-root Typography-root-17 MuiTypography-h4"
              data-testid="typography"
            >
              Careers
            </h4>
            <nav>
              <ul
                class="Footer-list-7"
              >
                <li
                  class="Footer-listItem-2"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root-25 MuiButton-text Button-text-26 Button-textDarkBg-30 Footer-link-6 MuiButton-textPrimary"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label Button-label-28"
                    >
                      Career Development
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </li>
                <li
                  class="Footer-listItem-2"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root-25 MuiButton-text Button-text-26 Button-textDarkBg-30 Footer-link-6 MuiButton-textPrimary"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label Button-label-28"
                    >
                      Diversity
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </li>
              </ul>
            </nav>
          </div>
        </div>
        <div
          class="Footer-secondaryNavigation-8"
        >
          <div
            class="Footer-logo-9"
          >
            <svg />
          </div>
          <ul
            class="Footer-list-7 Footer-listInline-10"
          >
            <li
              class="Footer-listItem-2"
            >
              <button
                class="MuiButtonBase-root MuiButton-root Button-root-25 MuiButton-text Button-text-26 Button-textDarkBg-30 Footer-link-6 MuiButton-textPrimary"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label Button-label-28"
                >
                  Legal
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </li>
            <li
              class="Footer-listItem-2"
            >
              <button
                class="MuiButtonBase-root MuiButton-root Button-root-25 MuiButton-text Button-text-26 Button-textDarkBg-30 Footer-link-6 MuiButton-textPrimary"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label Button-label-28"
                >
                  Imprint
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </li>
            <li
              class="Footer-listItem-2"
            >
              <button
                class="MuiButtonBase-root MuiButton-root Button-root-25 MuiButton-text Button-text-26 Button-textDarkBg-30 Footer-link-6 MuiButton-textPrimary"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label Button-label-28"
                >
                  UK Tax Strategy
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </li>
            <li
              class="Footer-listItem-2"
            >
              <button
                class="MuiButtonBase-root MuiButton-root Button-root-25 MuiButton-text Button-text-26 Button-textDarkBg-30 Footer-link-6 MuiButton-textPrimary"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label Button-label-28"
                >
                  UK Modern Slavery Act
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </li>
            <li
              class="Footer-listItem-2"
            >
              <button
                class="MuiButtonBase-root MuiButton-root Button-root-25 MuiButton-text Button-text-26 Button-textDarkBg-30 Footer-link-6 MuiButton-textPrimary"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label Button-label-28"
                >
                  Cookie Policy
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </li>
            <li
              class="Footer-listItem-2"
            >
              <button
                class="MuiButtonBase-root MuiButton-root Button-root-25 MuiButton-text Button-text-26 Button-textDarkBg-30 Footer-link-6 MuiButton-textPrimary"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label Button-label-28"
                >
                  Priority Notice
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </li>
            <li
              class="Footer-listItem-2"
            >
              <button
                class="MuiButtonBase-root MuiButton-root Button-root-25 MuiButton-text Button-text-26 Button-textDarkBg-30 Footer-link-6 MuiButton-textPrimary"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label Button-label-28"
                >
                  Sitemap
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </li>
          </ul>
          <div
            class="Footer-standardLogo-11"
          >
            <svg />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Footer component renders in a bigger breakpoint 1`] = `
<div>
  <div
    class="Footer-root-45"
    data-testid="footer"
  >
    <div
      class="Container-root-57"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 MuiGrid-justify-content-xs-space-between"
        >
          <div
            class="MuiGrid-root Grid-item-59 MuiGrid-item"
          >
            <h4
              class="MuiTypography-root Typography-root-61 MuiTypography-h4"
              data-testid="typography"
            >
              Get in touch
            </h4>
            <nav>
              <ul
                class="Footer-list-51"
              >
                <li
                  class="Footer-listItem-46"
                >
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiButton-root Button-root-69 MuiButton-text Button-text-70 Button-textDarkBg-74 Footer-link-50 MuiButton-textPrimary"
                    href="tel:+4401234567890"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-label Button-label-72"
                    >
                      <span
                        class="MuiButton-startIcon Button-startIcon-73 MuiButton-iconSizeMedium"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"
                          />
                        </svg>
                      </span>
                      +44 (0) 1234567890
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                </li>
                <li
                  class="Footer-listItem-46"
                >
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiButton-root Button-root-69 MuiButton-text Button-text-70 Button-textDarkBg-74 Footer-link-50 MuiButton-textPrimary"
                    href="mailto:info@bmigroup.com"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-label Button-label-72"
                    >
                      <span
                        class="MuiButton-startIcon Button-startIcon-73 MuiButton-iconSizeMedium"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
                          />
                        </svg>
                      </span>
                      info@bmigroup.com
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                </li>
                <li
                  class="Footer-listItem-46 Footer-listItemIcon-47"
                >
                  <a
                    aria-disabled="false"
                    aria-label="Facebook"
                    class="MuiButtonBase-root MuiIconButton-root IconButton-root-80 iconButton IconButton-medium-86 IconButton-text-82 IconButton-textDark-83 Footer-iconLink-48"
                    href="https://facebook.com/bmigroup"
                    tabindex="0"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root Footer-icon-49"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M5 3h14a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2m13 2h-2.5A3.5 3.5 0 0 0 12 8.5V11h-2v3h2v7h3v-7h3v-3h-3V9a1 1 0 0 1 1-1h2V5z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                </li>
                <li
                  class="Footer-listItem-46 Footer-listItemIcon-47"
                >
                  <a
                    aria-disabled="false"
                    aria-label="LinkedIn"
                    class="MuiButtonBase-root MuiIconButton-root IconButton-root-80 iconButton IconButton-medium-86 IconButton-text-82 IconButton-textDark-83 Footer-iconLink-48"
                    href="https://linkedin.com/bmigroup"
                    tabindex="0"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root Footer-icon-49"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                </li>
                <li
                  class="Footer-listItem-46 Footer-listItemIcon-47"
                >
                  <a
                    aria-disabled="false"
                    aria-label="Youtube"
                    class="MuiButtonBase-root MuiIconButton-root IconButton-root-80 iconButton IconButton-medium-86 IconButton-text-82 IconButton-textDark-83 Footer-iconLink-48"
                    href="https://youtube.com/bmigroup"
                    tabindex="0"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root Footer-icon-49"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10 15l5.19-3L10 9v6m11.56-7.83c.13.47.22 1.1.28 1.9.07.8.1 1.49.1 2.09L22 12c0 2.19-.16 3.8-.44 4.83-.25.9-.83 1.48-1.73 1.73-.47.13-1.33.22-2.65.28-1.3.07-2.49.1-3.59.1L12 19c-4.19 0-6.8-.16-7.83-.44-.9-.25-1.48-.83-1.73-1.73-.13-.47-.22-1.1-.28-1.9-.07-.8-.1-1.49-.1-2.09L2 12c0-2.19.16-3.8.44-4.83.25-.9.83-1.48 1.73-1.73.47-.13 1.33-.22 2.65-.28 1.3-.07 2.49-.1 3.59-.1L12 5c4.19 0 6.8.16 7.83.44.9.25 1.48.83 1.73 1.73z"
                        />
                      </svg>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                </li>
              </ul>
            </nav>
          </div>
          <div
            class="MuiGrid-root Grid-item-59 MuiGrid-item"
          >
            <h4
              class="MuiTypography-root Typography-root-61 MuiTypography-h4"
              data-testid="typography"
            >
              About BMI
            </h4>
            <nav>
              <ul
                class="Footer-list-51"
              >
                <li
                  class="Footer-listItem-46"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root-69 MuiButton-text Button-text-70 Button-textDarkBg-74 Footer-link-50 MuiButton-textPrimary"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label Button-label-72"
                    >
                      Our Story
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </li>
                <li
                  class="Footer-listItem-46"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root-69 MuiButton-text Button-text-70 Button-textDarkBg-74 Footer-link-50 MuiButton-textPrimary"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label Button-label-72"
                    >
                      Our Brands
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </li>
                <li
                  class="Footer-listItem-46"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root-69 MuiButton-text Button-text-70 Button-textDarkBg-74 Footer-link-50 MuiButton-textPrimary"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label Button-label-72"
                    >
                      Diversity
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </li>
                <li
                  class="Footer-listItem-46"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root-69 MuiButton-text Button-text-70 Button-textDarkBg-74 Footer-link-50 MuiButton-textPrimary"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label Button-label-72"
                    >
                      BMI's CSR Statement
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </li>
              </ul>
            </nav>
          </div>
          <div
            class="MuiGrid-root Grid-item-59 MuiGrid-item"
          >
            <h4
              class="MuiTypography-root Typography-root-61 MuiTypography-h4"
              data-testid="typography"
            >
              Partner program
            </h4>
            <nav>
              <ul
                class="Footer-list-51"
              >
                <li
                  class="Footer-listItem-46"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root-69 MuiButton-text Button-text-70 Button-textDarkBg-74 Footer-link-50 MuiButton-textPrimary"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label Button-label-72"
                    >
                      BMI RoofPro
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </li>
                <li
                  class="Footer-listItem-46"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root-69 MuiButton-text Button-text-70 Button-textDarkBg-74 Footer-link-50 MuiButton-textPrimary"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label Button-label-72"
                    >
                      Team Icopal
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </li>
                <li
                  class="Footer-listItem-46"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root-69 MuiButton-text Button-text-70 Button-textDarkBg-74 Footer-link-50 MuiButton-textPrimary"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label Button-label-72"
                    >
                      Training
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </li>
                <li
                  class="Footer-listItem-46"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root-69 MuiButton-text Button-text-70 Button-textDarkBg-74 Footer-link-50 MuiButton-textPrimary"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label Button-label-72"
                    >
                      Brand Central
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </li>
              </ul>
            </nav>
          </div>
          <div
            class="MuiGrid-root Grid-item-59 MuiGrid-item"
          >
            <h4
              class="MuiTypography-root Typography-root-61 MuiTypography-h4"
              data-testid="typography"
            >
              Careers
            </h4>
            <nav>
              <ul
                class="Footer-list-51"
              >
                <li
                  class="Footer-listItem-46"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root-69 MuiButton-text Button-text-70 Button-textDarkBg-74 Footer-link-50 MuiButton-textPrimary"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label Button-label-72"
                    >
                      Career Development
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </li>
                <li
                  class="Footer-listItem-46"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root Button-root-69 MuiButton-text Button-text-70 Button-textDarkBg-74 Footer-link-50 MuiButton-textPrimary"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label Button-label-72"
                    >
                      Diversity
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </li>
              </ul>
            </nav>
          </div>
        </div>
        <div
          class="Footer-secondaryNavigation-52"
        >
          <div
            class="Footer-logo-53"
          >
            <svg />
          </div>
          <ul
            class="Footer-list-51 Footer-listInline-54"
          >
            <li
              class="Footer-listItem-46"
            >
              <button
                class="MuiButtonBase-root MuiButton-root Button-root-69 MuiButton-text Button-text-70 Button-textDarkBg-74 Footer-link-50 MuiButton-textPrimary"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label Button-label-72"
                >
                  Legal
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </li>
            <li
              class="Footer-listItem-46"
            >
              <button
                class="MuiButtonBase-root MuiButton-root Button-root-69 MuiButton-text Button-text-70 Button-textDarkBg-74 Footer-link-50 MuiButton-textPrimary"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label Button-label-72"
                >
                  Imprint
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </li>
            <li
              class="Footer-listItem-46"
            >
              <button
                class="MuiButtonBase-root MuiButton-root Button-root-69 MuiButton-text Button-text-70 Button-textDarkBg-74 Footer-link-50 MuiButton-textPrimary"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label Button-label-72"
                >
                  UK Tax Strategy
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </li>
            <li
              class="Footer-listItem-46"
            >
              <button
                class="MuiButtonBase-root MuiButton-root Button-root-69 MuiButton-text Button-text-70 Button-textDarkBg-74 Footer-link-50 MuiButton-textPrimary"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label Button-label-72"
                >
                  UK Modern Slavery Act
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </li>
            <li
              class="Footer-listItem-46"
            >
              <button
                class="MuiButtonBase-root MuiButton-root Button-root-69 MuiButton-text Button-text-70 Button-textDarkBg-74 Footer-link-50 MuiButton-textPrimary"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label Button-label-72"
                >
                  Cookie Policy
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </li>
            <li
              class="Footer-listItem-46"
            >
              <button
                class="MuiButtonBase-root MuiButton-root Button-root-69 MuiButton-text Button-text-70 Button-textDarkBg-74 Footer-link-50 MuiButton-textPrimary"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label Button-label-72"
                >
                  Priority Notice
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </li>
            <li
              class="Footer-listItem-46"
            >
              <button
                class="MuiButtonBase-root MuiButton-root Button-root-69 MuiButton-text Button-text-70 Button-textDarkBg-74 Footer-link-50 MuiButton-textPrimary"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label Button-label-72"
                >
                  Sitemap
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </li>
          </ul>
          <div
            class="Footer-standardLogo-55"
          >
            <svg />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
